--- a/prognosis/template/index.html
+++ b/prognosis/template/index.html
@@ -7,7 +7,7 @@
       content="width=device-width,initial-scale=1,shrink-to-fit=no"
     />
     <link rel="shortcut icon" href="./favicon.png" />
-    <title>Streamlit</title>
+    <title>Covid19 Prediction</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
